--- a/style.css
+++ b/style.css
@@ -4,3 +4,9 @@
     font-family: 'Josefin Sans', sans-serif;
     box-sizing: border-box;
 }
+
+.hero{
+    height: 100vh;
+    width: 100%;
+    background-image: url(../img/Background_image.jpg);
+}
