--- a/style.css
+++ b/style.css
@@ -8,5 +8,5 @@
 .hero{
     height: 100vh;
     width: 100%;
-    background-image: url(/Users/chrisvann1/Desktop/Background_image.jpg);
+    background-image: url(/Users/chrisvann1/Desktop/SQL_and_Python/Project/Github_page/Chrisvann1.github.io/Background_image.jpg);
 }
