--- a/style.css
+++ b/style.css
@@ -6,5 +6,7 @@
 }
 
 .hero{
-    background-image: url(/Users/chrisvann1/Desktop/SQL_and_Python/Project/Github_page/Chrisvann1.github.io/Background_image.jpg);
+    height: 100vh;
+    width: 100%;
+    background-image: url(../Background.jpg);
 }
