--- a/style.css
+++ b/style.css
@@ -6,5 +6,7 @@
 }
 
 .hero{
-    background-color: black;
+    height: 100vh;
+    width: 100%;
+    background-image: url(Background_image.jpg);
 }
