--- a/style.css
+++ b/style.css
@@ -9,4 +9,15 @@
     height: 100vh;
     width: 100%;
     background-image: url(Background_image.jpg);
+    background-size:cover;
+    background-position:center;
+}
+
+nav{
+    display:flex;
+    align-items: center; 
+    justify-content: space-between; 
+    padding-top:45px;
+    padding-left: 8%;
+    padding-right: 8%;
 }
