--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 .hero{
     height: 100vh;
     width: 100%;
-    background-image: url(Background_image.jpg);
+    background-image: url(../Background.jpg);
     background-size:cover;
     background-position:center;
 }
@@ -20,4 +20,74 @@ nav{
     padding-top:45px;
     padding-left: 8%;
     padding-right: 8%;
+}
+
+.logo{
+    color:white;
+    font-size: 35; 
+    letter-spacing: 1px; 
+    cursor: pointer; 
+}
+
+span{
+    color: #f9004f
+}
+
+nav ul li{
+    list-style-type: none; 
+    display: inline-block;
+    padding: 10px 25px;
+}
+
+nav ul li a{
+    color: white; 
+    text-decoration: none;
+    font-weight:bold;
+    text-transform: capitalize;
+}
+
+nav ul li a:hover{
+    color: #f9004f; 
+    transition: .4s;
+}
+
+.btn{
+    background-color: #f9004f;
+    color: white;
+    text-decoration: none;
+    border: 2px solid transparent;
+    font-weight: bold; 
+    padding: 10px 25px; 
+    border-radius: 30px; 
+    transition: transform .4s;
+}
+
+.btn:hover{
+    transform: scale(1.2);
+}
+
+.content{
+    position: absolute; 
+    top: 50%;
+    left: 8%; 
+    transform: translateY(-50%);
+}
+
+h1{
+    color: white;
+    margin: 20px 0px 20px; 
+    font-size: 75px;
+}
+
+h3{
+    color: white; 
+    font-size: 25px;
+    margin-bottom: 50px; 
+}
+
+h4{
+    color: #fcfc;
+    letter-spacing: 2px;
+    font-size: 20px;
+
 }
