--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 .hero{
     height: 100vh;
     width: 100%;
-    background-image: url(../Background.jpg);
+    background-image: url(Background.jpg);
     background-size:cover;
     background-position:center;
 }
@@ -127,8 +127,8 @@ h4{
 }
 
 .about img{
-    height:auto; 
-    width: 430 px; 
+    height:100 px; 
+    width: 100 px; 
 }
 
 .about-text{
