--- a/style.css
+++ b/style.css
@@ -126,10 +126,10 @@ h4{
     background-color: #191919;
 }
 
-.about img{
+/* .about img{
     height: auto; 
     width: 300px; 
-}
+} */
 
 .about-text{
     width: 550px; 
