--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ nav{
 }
 
 span{
-    color: #f9004f
+    color: purple;
 }
 
 nav ul li{
@@ -47,12 +47,12 @@ nav ul li a{
 }
 
 nav ul li a:hover{
-    color: #f9004f; 
+    color: purple; 
     transition: .4s;
 }
 
 .btn{
-    background-color: #f9004f;
+    background-color: purple;
     color: white;
     text-decoration: none;
     border: 2px solid transparent;
@@ -101,7 +101,7 @@ h4{
     display: inline-block;
     width: 100%; 
     padding: 14px 130px 14px 15px; 
-    border: 2px solid #f9004d; 
+    border: 2px solid purple; 
     outline: none; 
     border-radius: 30px;
 }
@@ -113,7 +113,7 @@ h4{
     border: none; 
     padding: 10px 30px; 
     border-radius: 30px;
-    background-color: #f9004d;
+    background-color: purple;
     color:white;
     box-shadow: 0px 0px 50x #000, 0px 0px 15px #858585; 
     top: 6px; 
@@ -165,4 +165,104 @@ h4{
     line-height: 28px;
     font-size: 18px;
     margin-bottom: 45px; 
+}
+
+button{
+    background-color: purple;
+    color: white; 
+    text-decoration: none;
+    border: 2px solid transparent;
+    font-weight: bold;
+    padding: 13px 30px; 
+    border-radius: 30px;
+    transition: .4s;
+}
+
+button:hover{
+    background-color: transparent;
+    border: 2px solid purple;
+    cursor: pointer
+}
+
+.contact-me{
+    width:100%;
+    height: 290px; 
+    background: #191919;
+    display: flex; 
+    align-items: center; 
+    flex-direction: column;
+    justify-content: center;
+
+}
+
+.contact-me p{
+    color: white;
+    font-size: 30px; 
+    font-weight: bold; 
+    margin-bottom: 25px; 
+}
+
+.contact-me .button-two{
+    background-color: purple;
+    color: white; 
+    text-decoration: none;
+    border: 2px solid transparent;
+    font-weight: bold;
+    padding: 13px 30px; 
+    border-radius: 30px;
+    transition: .4s;
+}
+
+.contact-me .button-two:hover{
+    background-color: transparent;
+    border: 2px solid purple;
+    cursor: pointer
+}
+
+footer{
+    position: relative; 
+    width: 100%; 
+    height: 400px;
+    background: #101010;
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+    justify-content: center;
+}
+
+footer p:nth-child(1){
+    font-size: 30px;
+    color: white;
+    margin-bottom: 20px;
+    font-size: bold;
+}
+
+.social{
+    display: flex;
+}
+
+.social a{
+    width: 45px;
+    height: 45px;
+    display: flex;
+    align-items: center;
+    justify-content:center;
+    background: purple;
+    border-radius: 50%;
+    margin: 22px 10px; 
+    color: white; 
+    text-decoration: none;
+    font-size: 20px;
+}
+
+.social a:hover{
+    transition: scale(1.3);
+    transition: .3s;
+}
+
+.end{
+    position: absolute; 
+    color: purple;
+    bottom: 35px;
+    font-size: 14px;
 }
