--- a/style.css
+++ b/style.css
@@ -267,8 +267,31 @@ footer p:nth-child(1){
     font-size: 14px;
 }
 
+.subpage{
+    position: absolute; 
+    top: 50%;
+    left: 8%; 
+    transform: translateY(-50%);
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+    justify-content: center;
+}
+
+h6{
+    color: white;
+    margin: 20px 0px 20px; 
+    font-size: 45px;
+}
+
+h7{
+    color: white; 
+    font-size: 20px;
+    margin-bottom: 50px; 
+}
+
 footer2{
-    position: bottom; 
+    position: top; 
     width:100%;
     height:100px;
     background: #191919; 
@@ -281,7 +304,7 @@ footer2{
 footer2 p:nth-child(1){
     font-size: 30px;
     color: white;
-    margin-bottom: 20px;
+    margin-bottom: 15px;
     font-size: bold;
 }
 
@@ -306,27 +329,4 @@ footer2 p:nth-child(1){
 .social2 a:hover{
     transition: scale(1.3);
     transition: .3s;
-}
-
-.subpage{
-    position: absolute; 
-    top: 50%;
-    left: 8%; 
-    transform: translateY(-50%);
-    display: flex;
-    flex-direction: column;
-    align-items: center; 
-    justify-content: center;
-}
-
-h6{
-    color: white;
-    margin: 20px 0px 20px; 
-    font-size: 45px;
-}
-
-h7{
-    color: white; 
-    font-size: 20px;
-    margin-bottom: 50px; 
 }
