--- a/style.css
+++ b/style.css
@@ -269,9 +269,7 @@ footer p:nth-child(1){
 
 .subpage{
     position: absolute; 
-    top: 50%;
-    left: 8%; 
-    transform: translateY(-50%);
+    width: 100;
     display: flex;
     flex-direction: column;
     align-items: center; 
@@ -291,7 +289,7 @@ h7{
 }
 
 footer2{
-    position: top; 
+    position: relative; 
     width:100%;
     height:100px;
     background: #191919; 
@@ -304,7 +302,7 @@ footer2{
 footer2 p:nth-child(1){
     font-size: 30px;
     color: white;
-    margin-bottom: 15px;
+    margin-bottom: 25px;
     font-size: bold;
 }
 
