--- a/style.css
+++ b/style.css
@@ -279,14 +279,14 @@ footer p:nth-child(1){
 
 h6{
     color: white;
-    margin: 20px 0px 20px; 
+    margin: 5px; 
     font-size: 45px;
 }
 
 h7{
     color: white; 
     font-size: 20px;
-    margin-bottom: 50px; 
+    margin-bottom: 5px; 
 }
 
 footer2{
