--- a/style.css
+++ b/style.css
@@ -270,7 +270,7 @@ footer p:nth-child(1){
 .subpage{
     position: absolute; 
     top: 25%; 
-    width: 100;
+    width: 100%;
     display: flex;
     flex-direction: column;
     text-align: center; 
@@ -279,20 +279,22 @@ footer p:nth-child(1){
 
 h6{
     color: white;
-    margin: 5px; 
+    margin: 10px; 
     font-size: 45px;
 }
 
 h7{
     color: white; 
     font-size: 20px;
-    margin-bottom: 5px; 
+    margin-bottom: 10px; 
 }
 
 footer2{
-    position: relative; 
+    position: fixed; 
     width:100%;
     height:100px;
+    left: 0px;
+    bottom: 20px;
     background: #191919; 
     display: flex; 
     flex-direction:column; 
