--- a/style.css
+++ b/style.css
@@ -274,7 +274,7 @@ footer p:nth-child(1){
     display: flex;
     flex-direction: column;
     text-align: center; 
-    justify-content: center;
+    justify-content: left;
 }
 
 h6{
