--- a/style.css
+++ b/style.css
@@ -306,6 +306,7 @@ footer2 p:nth-child(1){
     font-size: 25px;
     color: white;
     margin-bottom: 100px;
+    bottom: 60px;
     font-size: bold;
 }
 
@@ -322,6 +323,7 @@ footer2 p:nth-child(1){
     background: purple;
     border-radius: 50%;
     margin-bottom: 50; 
+    bottom: 30; 
     color: white; 
     text-decoration: none;
     font-size: 20px;
