--- a/style.css
+++ b/style.css
@@ -323,8 +323,7 @@ footer2 p:nth-child(1){
     justify-content:center;
     background: purple;
     border-radius: 50%;
-    bottom: 200px;
-    top: 50px; 
+    margin-bottom: 100px;
     color: white; 
     text-decoration: none;
     font-size: 20px;
