--- a/style.css
+++ b/style.css
@@ -318,12 +318,13 @@ footer2 p:nth-child(1){
 
 .social2 a{
     width: 45px;
-    height: 50px;
+    height: 45px;
     display: flex;
     align-items: center;
     justify-content:center;
     background: purple;
     border-radius: 50%;
+    margin: 22px 10px; 
     color: white; 
     text-decoration: none;
     font-size: 20px;
